<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItem_menuSeleccion_refrescar"
        android:icon="@drawable/ic_baseline_refresh"
        android:title="@string/menuSeleccion_menuItem_refrescar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItem_menuSeleccion_ayuda"
        android:icon="@drawable/ic_baseline_help_outline"
        android:title="@string/menuEstadisticasNotas_ayuda"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItem_menuSeleccion_cerrarSesion"
        android:icon="@drawable/ic_baseline_exit_to_app"
        android:title="@string/menuSeleccion_menuItem_cerrarSesion"
        app:showAsAction="always" />
</menu>