<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/activityMain_botonMenuDesplegable"
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/stylo_boton_overflow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_menu" />

    <ImageView
        android:id="@+id/activityMain_logotipoNotas"
        android:layout_width="170dp"
        android:layout_height="208dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_inputDNI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMain_botonMenuDesplegable"
        app:srcCompat="@drawable/logonotas" />

    <EditText
        android:id="@+id/activityMain_inputDNI"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/stylo_bordes_text"
        android:drawableLeft="@drawable/ic_action_name"
        android:drawablePadding="10dip"
        android:ems="10"
        android:hint="@string/hint_usuario"
        android:inputType="numberPassword"
        android:paddingLeft="10dip"
        android:paddingRight="0dip"
        android:textAlignment="viewStart"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_inputPIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/activityMain_inputPIN"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/stylo_bordes_text"
        android:drawableLeft="@drawable/ic_action_lock"
        android:drawablePadding="10dip"
        android:ems="10"
        android:hint="@string/hint_clave"
        android:inputType="numberPassword"
        android:paddingLeft="10dip"
        android:paddingRight="0dip"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_checkRecordarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/activityMain_checkRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:buttonTint="@android:color/white"
        android:checked="false"
        android:text="@string/check_recordarme"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_botonAcceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activityMain_botonAcceder"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/stylo_bordes_acceder"
        android:text="@string/boton_acceder"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>