<?xml version="1.0" encoding="utf-8"?>
<!-- AUTOR: Mario Aragones Lozano -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtViewCardNotaNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cardNota_nombre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            card_view:layout_constraintEnd_toStartOf="@+id/guiaVerticalCardNotas"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewCardNotaNota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cardNota_nota"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="18sp"
            card_view:layout_constraintEnd_toStartOf="@+id/guiaVerticalCardNotas"
            card_view:layout_constraintStart_toStartOf="@+id/txtViewCardNotaNombre"
            card_view:layout_constraintTop_toBottomOf="@+id/txtViewCardNotaNombre" />

        <android.support.constraint.Guideline
            android:id="@+id/guiaVerticalCardNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_end="75dp" />

        <TextView
            android:id="@+id/txtViewCardNotaPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/cardNota_pos"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/guiaVerticalCardNotas"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divisorVerticalCardNotas_NombrePos"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/guiaVerticalCardNotas"
            card_view:layout_constraintStart_toStartOf="@+id/guiaVerticalCardNotas"
            card_view:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>